FIX: Satellite view in PVH + Home button visibility in PVPs - Switched PVH to ArcGIS satellite for better reliability, added improved layer control with emojis, fixed home button function in all PVPs with fallback routing

--- a/properties/lady-mabel-estate-advanced.html
+++ b/properties/lady-mabel-estate-advanced.html
@@ -574,6 +574,17 @@
             hubUrl: "../index.html"
         };
         
+        // Improved home button function
+        function goBackToHub() {
+            // Try relative path first, fallback to absolute paths
+            try {
+                window.location.href = PROPERTY_CONFIG.hubUrl;
+            } catch (error) {
+                // Fallback for deployed environments
+                window.location.href = "/";
+            }
+        }
+        
         // Embedded sample parcel data for Lady Mabel Estate
         const subdivisionData = {
             "type": "FeatureCollection",
